--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     const link = document.createElement("a");
                     link.href = item.url;
                     link.textContent = item.name;
-                    link.target = "_blank";
+                    // link.target = "_blank";
                     rowDiv.appendChild(link);
                     rowDiv.append(" 🆕");
                     if (index < data.links.length - 1) {
