--- a/index.html
+++ b/index.html
@@ -108,12 +108,58 @@
         }
         const sectionData = [
             {
-                title: "Git & GitHub",
+                title: "HTML & CSS & JAVASCRIPT",
                 links: [
-                    { url: "https://www.youtube.com/watch?v=VIBWdLLq9kQ", name: "Github Tutorial" },
-                    { url: "https://www.youtube.com/watch?v=HkdAHXoRtos", name: "Git Basics" }
+                    { url: "https://youtu.be/G3e-cpL7ofc?si=MB_o0ruDTFJq27Yn", name: "HTML & CSS Full Course - Beginner to Pro" },
+                    { url: "https://www.youtube.com/watch?v=NfvtQ2p5QG4", name: "HTML CSS JS projects (Beginner)" },
+                    { url: "https://youtu.be/EerdGm-ehJQ?si=AYtYNv8RYcILb2V2", name: "JavaScript Tutorial Full Course - Beginner to Pro" }
                 ]
-            }
+            },
+            {
+                title: "GIT & GITHUB",
+                links: [
+                    { url: "https://youtu.be/VIBWdLLq9kQ?si=mDnDyKWveWT9UsUm", name: "Git and GitHub Tutorial" },
+                    { url: "https://youtu.be/Q1kHG842HoI?si=EVytdTQcoikFJNNh", name: "Git Branching and Merging" }
+                ]
+            },
+            {
+                title: "Java",
+                links: [
+                    { url: "https://youtube.com/playlist?list=PLvepBxfiuao2qCm6QgUay9LUAehVbGlOb&si=tgar3WWcku94EVNy", name: "Java Programming Tutorial Series" }
+                ]
+            },
+            {
+                title: "BOOTSTRAP",
+                links: [
+                    { url: "https://www.youtube.com/watch?v=OcnBAwpMpdI", name: "Bootstrap for Beginners" }
+                ]
+            },
+            {
+                title: "REACT",
+                links: [
+                    { url: "https://youtu.be/XrwsMN2IWnE?si=IQiP5tZ_AKI7lqkJ", name: "Master ReactJS" }
+                ]
+            },
+            {
+                title: "WEB DEVELOPMENT",
+                links: [
+                    { url: "http://www.youtube.com/playlist?list=PLWKjhJtqVAbmMuZ3saqRIBimAKIMYkt0E", name: "Front End Developer Learning Path" },
+                    { url: "https://www.youtube.com/playlist?list=PLWKjhJtqVAbn21gs5UnLhCQ82f923WCgM", name: "Back End Developer Learning Path" }
+                ]
+            },
+            {
+                title: "SQL",
+                links: [
+                    { url: "https://youtu.be/7S_tz1z_5bA?si=Ffp7iBbk54CJ-SWp", name: "https://youtu.be/7S_tz1z_5bA?si=Ffp7iBbk54CJ-SWp" }
+                ]
+            },
+            {
+                title: "AI & ML",
+                links: [
+                    { url: "https://www.youtube.com/watch?v=0YdpwSYMY6I", name: "All Machine Learning Models" },
+                    { url: "https://youtu.be/V_xro1bcAuA?si=q1oYnVME12k03NXr", name: "PyTorch for Deep Learning & Machine Learning – Full Course" },
+                ]
+            },
         ];
         createRows(sectionData);
 
