--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 title: "AI & ML",
                 links: [
                     { url: "https://www.youtube.com/watch?v=0YdpwSYMY6I", name: "All Machine Learning Models" },
-                    { url: "https://youtu.be/V_xro1bcAuA?si=q1oYnVME12k03NXr", name: "PyTorch for Deep Learning & Machine Learning – Full Course" },
+                    { url: "https://youtu.be/V_xro1bcAuA?si=q1oYnVME12k03NXr", name: "PyTorch for Deep Learning & Machine Learning – Full Course" }
                 ]
             },
         ];
