--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     const link = document.createElement("a");
                     link.href = item.url;
                     link.textContent = item.name;
-                    // link.target = "_blank";
+                    link.target = "_blank";
                     rowDiv.appendChild(link);
                     rowDiv.append(" 🆕");
                     if (index < data.links.length - 1) {
@@ -150,7 +150,7 @@
             {
                 title: "SQL",
                 links: [
-                    { url: "https://youtu.be/7S_tz1z_5bA?si=Ffp7iBbk54CJ-SWp", name: "https://youtu.be/7S_tz1z_5bA?si=Ffp7iBbk54CJ-SWp" }
+                    { url: "SQL Course for Beginners [Full Course]", name: "https://youtu.be/7S_tz1z_5bA?si=Ffp7iBbk54CJ-SWp" }
                 ]
             },
             {
