--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             {
                 title: "SQL",
                 links: [
-                    { url: "SQL Course for Beginners [Full Course]", name: "https://youtu.be/7S_tz1z_5bA?si=Ffp7iBbk54CJ-SWp" }
+                    { url: "https://youtu.be/7S_tz1z_5bA?si=Ffp7iBbk54CJ-SWp", name: "SQL Course for Beginners [Full Course]" }
                 ]
             },
             {
