--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coderscult</title>
+    <link rel="icon" type="image/x-icon" href="./logo.png">
     <style>
         body {
             background-color: aliceblue;
@@ -160,6 +161,14 @@
                     { url: "https://youtu.be/V_xro1bcAuA?si=q1oYnVME12k03NXr", name: "PyTorch for Deep Learning & Machine Learning – Full Course" }
                 ]
             },
+            {
+                title: "IOT",
+                links: [
+                    { url: "https://www.youtube.com/watch?v=zJ-LqeX_fLU", name: "Arduino Course for Beginners - Open-Source Electronics Platform" },
+                    { url: "https://www.youtube.com/watch?v=QO_Jlz1qpDw", name: "Arduino Programming" },
+                    { url: "https://www.youtube.com/watch?v=-saXw1EipX0", name: "Fritzing Tutorial - A Beginners Guide to Making Circuit & Wiring Diagrams" }
+                ]
+            }
         ];
         createRows(sectionData);
 
